force-app/main/default/objects/OLY_PTI__c/OLY_PTI__c.object-meta.xml
<CustomObject>
    <label>PTI</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PTI#</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PTIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>