force-app/main/default/objects/OLY_PTI__c/fields/OLY_A_Device_Problem__c.field-meta.xml
<CustomField>
    <fullName>OLY_A_Device_Problem__c</fullName>
    <formula>IF(
ISBLANK(OLY_A_Device_Problem_Code__c),
NULL,
OLY_A_Device_Problem_Code__r.CMPL123CME__Name_With_Code__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>A - Device Problem</label>
    <type>Text</type>
</CustomField>