force-app/main/default/objects/OLY_PTI__c/fields/OLY_A_Device_Problem_Code__c.field-meta.xml
<CustomField>
    <fullName>OLY_A_Device_Problem_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>A - Device Problem Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>DEVICE CODE</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
    <relationshipLabel>PTIs</relationshipLabel>
    <relationshipName>PTIs</relationshipName>
    <type>Lookup</type>
</CustomField>