force-app/main/default/objects/OLY_PTI__c/fields/OLY_AR_Code__c.field-meta.xml
<CustomField>
    <fullName>OLY_AR_Code__c</fullName>
    <formula>OLY_A_Device_Problem_Code__r.Name &amp;&quot; | &quot;&amp;
OLY_G_Device_Component_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AR Code</label>
    <type>Text</type>
</CustomField>