force-app/main/default/objects/OLY_PTI__c/fields/OLY_C_Investigation_Finding__c.field-meta.xml
<CustomField>
    <fullName>OLY_C_Investigation_Finding__c</fullName>
    <formula>IF(
    ISBLANK(OLY_C_Investigation_Finding_Code__c),
    NULL,
    OLY_C_Investigation_Finding_Code__r.CMPL123CME__Name_With_Code__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>C - Investigation Finding</label>
    <type>Text</type>
</CustomField>