force-app/main/default/objects/OLY_PTI__c/fields/OLY_C_Investigation_Finding_Code__c.field-meta.xml
<CustomField>
    <fullName>OLY_C_Investigation_Finding_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C - Investigation Finding Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>EVAL RESULT CODE</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
    <relationshipLabel>PTIs (C - Investigation Finding Code)</relationshipLabel>
    <relationshipName>PTIs2</relationshipName>
    <type>Lookup</type>
</CustomField>