force-app/main/default/objects/OLY_PTI__c/fields/OLY_D_Investigation_Conclusion__c.field-meta.xml
<CustomField>
    <fullName>OLY_D_Investigation_Conclusion__c</fullName>
    <formula>IF(
    ISBLANK(OLY_D_Investigation_Conclusion_Code__c),
    NULL,
    OLY_D_Investigation_Conclusion_Code__r.CMPL123CME__Name_With_Code__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D - Investigation Conclusion</label>
    <type>Text</type>
</CustomField>