force-app/main/default/objects/OLY_PTI__c/fields/OLY_D_Investigation_Conclusion_Code__c.field-meta.xml
<CustomField>
    <fullName>OLY_D_Investigation_Conclusion_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>D - Investigation Conclusion Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>EVAL CONCLUSION CODE</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
    <relationshipLabel>PTIs (D - Investigation Conclusion Code)</relationshipLabel>
    <relationshipName>PTIs3</relationshipName>
    <type>Lookup</type>
</CustomField>