force-app/main/default/objects/OLY_PTI__c/fields/OLY_External_ID__c.field-meta.xml
<CustomField>
    <fullName>OLY_External_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>