force-app/main/default/objects/OLY_PTI__c/fields/OLY_G_Device_Component__c.field-meta.xml
<CustomField>
    <fullName>OLY_G_Device_Component__c</fullName>
    <formula>IF(
    ISBLANK(OLY_G_Device_Component_Code__c),
    NULL,
    OLY_G_Device_Component_Code__r.CMPL123CME__Name_With_Code__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>G - Device Component</label>
    <type>Text</type>
</CustomField>