force-app/main/default/objects/OLY_PTI__c/fields/OLY_G_Device_Component_Code__c.field-meta.xml
<CustomField>
    <fullName>OLY_G_Device_Component_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>G - Device Component Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
            <operation>equals</operation>
            <value>COMPONENT CODE</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
    <relationshipLabel>PTIs (G - Device Component Code)</relationshipLabel>
    <relationshipName>PTIs4</relationshipName>
    <type>Lookup</type>
</CustomField>