force-app/main/default/objects/OLY_PTI__c/fields/OLY_Investigation_Conclusion__c.field-meta.xml
<CustomField>
    <fullName>OLY_Investigation_Conclusion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>zInvestigation Conclusion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>