force-app/main/default/objects/OLY_PTI__c/fields/OLY_Investigation_Summary__c.field-meta.xml
<CustomField>
    <fullName>OLY_Investigation_Summary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Investigation Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>