force-app/main/default/objects/OLY_PTI__c/fields/OLY_Investigation_Summary_Code__c.field-meta.xml
<CustomField>
    <fullName>OLY_Investigation_Summary_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigation Summary Code</label>
    <referenceTo>OLY_PTI_Investigation_Summary__c</referenceTo>
    <relationshipLabel>PTIs</relationshipLabel>
    <relationshipName>PTIs</relationshipName>
    <type>Lookup</type>
</CustomField>