force-app/main/default/objects/OLY_PTI__c/fields/OLY_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>OLY_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>