force-app/main/default/objects/OLY_PTI__c/fields/OLY_Non_Reportability_Justification__c.field-meta.xml
<CustomField>
    <fullName>OLY_Non_Reportability_Justification__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Non-Reportability Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>