force-app/main/default/objects/OLY_PTI__c/fields/OLY_Product_Coding_Group__c.field-meta.xml
<CustomField>
    <fullName>OLY_Product_Coding_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Coding Group</label>
    <referenceTo>OLY_Product_Coding_Group__c</referenceTo>
    <relationshipLabel>PTIs</relationshipLabel>
    <relationshipName>PTIs</relationshipName>
    <type>Lookup</type>
</CustomField>