force-app/main/default/objects/OLY_PTI__c/fields/OLY_Product_Coding_Group_picklist__c.field-meta.xml
<CustomField>
    <fullName>OLY_Product_Coding_Group_picklist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Coding Group picklist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>