force-app/main/default/objects/OLY_PTI__c/fields/OLY_Product_Return_Status__c.field-meta.xml
<CustomField>
    <fullName>OLY_Product_Return_Status__c</fullName>
    <label>Product Return Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>