force-app/main/default/objects/OLY_PTI__c/fields/OLY_PTI_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>OLY_PTI_Exclusion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PTI Exclusion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>