force-app/main/default/objects/OLY_PTI__c/fields/OLY_PTI_Group__c.field-meta.xml
<CustomField>
    <fullName>OLY_PTI_Group__c</fullName>
    <formula>Name &amp; &apos;-&apos; &amp; 
OLY_Product_Coding_Group__r.Name &amp; &apos;-&apos; &amp; 
IF(ISPICKVAL(OLY_Product_Return_Status__c, &apos;Yes&apos;), &apos;PR&apos;, &apos;NR&apos;) &amp; &apos;-&apos; &amp; 
OLY_A_Device_Problem_Code__r.Name &amp; &apos;-&apos; &amp; 
OLY_G_Device_Component_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PTI Group</label>
    <type>Text</type>
</CustomField>