force-app/main/default/objects/OLY_PTI__c/fields/OLY_PTI_Non_Report_Justification_Code__c.field-meta.xml
<CustomField>
    <fullName>OLY_PTI_Non_Report_Justification_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non-Reportability Justification Code</label>
    <referenceTo>OLY_PTI_Non_Reportability_Justification__c</referenceTo>
    <relationshipLabel>PTIs</relationshipLabel>
    <relationshipName>PTIs</relationshipName>
    <type>Lookup</type>
</CustomField>