force-app/main/default/objects/OLY_PTI__c/fields/OLY_Reportability_Rationale__c.field-meta.xml
<CustomField>
    <fullName>OLY_Reportability_Rationale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reportability Rationale</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>