force-app/main/default/objects/OLY_PTI__c/fields/OLY_Reportability_Rationale_Code__c.field-meta.xml
<CustomField>
    <fullName>OLY_Reportability_Rationale_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reportability Rationale Code</label>
    <referenceTo>OLY_RAD_Code__c</referenceTo>
    <relationshipLabel>PTIs</relationshipLabel>
    <relationshipName>PTIs</relationshipName>
    <type>Lookup</type>
</CustomField>