force-app/main/default/objects/OLY_PTI__c/fields/OLY_Type__c.field-meta.xml
<CustomField>
    <fullName>OLY_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>As Reported</fullName>
            </value>
            <value>
                <fullName>As Investigated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>