force-app/main/default/objects/OLY_PTI__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OLY_Product_Coding_Group__c</columns>
    <columns>OLY_Product_Return_Status__c</columns>
    <columns>OLY_Type__c</columns>
    <columns>OLY_A_Device_Problem_Code__c</columns>
    <columns>OLY_G_Device_Component_Code__c</columns>
    <columns>OLY_C_Investigation_Finding_Code__c</columns>
    <columns>OLY_D_Investigation_Conclusion_Code__c</columns>
    <columns>OLY_Investigation_Summary_Code__c</columns>
    <columns>OLY_Reportability_Rationale_Code__c</columns>
    <columns>OLY_PTI_Non_Report_Justification_Code__c</columns>
    <columns>OLY_PTI_Exclusion__c</columns>
    <columns>OLY_Is_Active__c</columns>
    <columns>OLY_External_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records *</label>
</ListView>